--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "My Trip 2022",
-  "name": "Create React App Sample",
+  "short_name": "Sunset Go",
+  "name": "Travel World by Sunset",
   "icons": [
     {
       "src": "favicon.ico",
